test/disabled/neg/macro-keyword-class1.check
macro-keyword-class1.scala:3: error: identifier expected but 'macro' found.
class macro
      ^
one error found
